--- a/comparison.html
+++ b/comparison.html
@@ -51,13 +51,13 @@
                         <div class="col-lg-6" style="padding-bottom: 30px;">
                             <div class="title">vs. Max Temperature</div>
                             <a href="plots_max_temp.html">
-                                <img class="panel" src="assets/temperaturemap.png" alt="Max Temperature Graph">
+                                <img class="panel img-fluid" src="assets/temperaturemap.png" alt="Max Temperature Graph">
                             </a>
                         </div>
                         <div class="col-lg-6" style="padding-bottom: 30px;">
                             <div class="title">vs. Humidity</div>
                             <a href="plots_humidity.html">
-                                <img class="panel" src="assets/humiditymap.png" alt="Humidity Graph">
+                                <img class="panel img-fluid" src="assets/humiditymap.png" alt="Humidity Graph">
                             </a>
                         </div>
                     </div>
@@ -65,13 +65,13 @@
                         <div class="col-lg-6" style="padding-bottom: 30px;">
                             <div class="title">vs. Cloudiness</div>
                             <a href="plots_cloudiness.html">
-                                <img class="panel" src="assets/cloudymap.png" alt="Cloudiness Graph">
+                                <img class="panel img-fluid" src="assets/cloudymap.png" alt="Cloudiness Graph">
                             </a>
                         </div>
                         <div class="col-lg-6" style="padding-bottom: 30px;">
                             <div class="title">vs. Wind Speed</div>
                             <a href="plots_windspeed.html">
-                                <img class="panel" src="assets/windmap.png" alt="Wind Speed Graph">
+                                <img class="panel img-fluid" src="assets/windmap.png" alt="Wind Speed Graph">
                             </a>
                         </div>
                     </div>
